--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/danteraphael/oboade#readme",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "shopify-liquid": "^1.9.0"
   }
 }
