--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/danteraphael/oboade#readme",
   "dependencies": {
     "express": "^4.15.4",
+    "nvm": "0.0.4",
     "shopify-liquid": "^1.9.0"
   }
 }
